<resources>
    <string name="app_name">FlexForce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="login">Login</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account_register">Dont have an account? Register</string>
    <string name="loginbtn">Login</string>
    <string name="welcome_to_flexforce">Welcome to FlexForce</string>
    <string name="with_this_app_you_will_be_able_to_get_that_summer_body_in_no_time_but_obviously_enjoy_the_journey">With this app you will be able to get that summer body in no time but obviously enjoy the journey</string>
    <string name="get_started">Get Started</string>
    <string name="terms_and_condition_apply">Terms and Condition Apply</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="current_streak">Workout Streak 🔥</string>
    <string name="weight">Weight</string>
    <string name="mon">Mon</string>
    <string name="favorite_workout">Favorite Workout</string>
    <string name="please_enter_calories">Please enter calories</string>
    <string name="please_enter_weight">Please enter weight</string>
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="johnny_doe">Johnny Doe</string>
    <string name="john">John</string>
    <string name="doey">Doey</string>
    <string name="english">English</string>
    <string name="passwordProfile">******************</string>
    <string name="enter_goal_weight">Enter Goal Weight</string>
    <string name="enter_body_fat">Enter Body Fat %</string>
    <string name="high_score_ud83c_udfc6">High Score 🏆</string>
    <string name="_20_days">20 days</string>
    <string name="enter_your_height">Enter Your Height</string>
    <string name="underweight_18_5_nnormal_18_5_24_9_noverweight_25_29_9_nobese_30">
        <![CDATA[Underweight: < 18.5\nNormal: 18.5 – 24.9\nOverweight: 25 – 29.9\nObese: 30+]]></string>
    <string name="back">back</string>
    <string name="registerSubHeading">Please register to continue</string>
    <string name="welcomebackground">Welcome Background</string>
    <string name="register_banner">register banner</string>
    <string name="clear">CLEAR</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="apply">APPLY</string>
    <string name="todo">TODO</string>
    <string name="switch_view">Switch View</string>
    <string name="log_out">Log Out</string>
    <string name="password_txt">Password</string>
    <string name="select_exercises">Select Exercises</string>
    <string name="search_by_exercise">Search by Exercise</string>
    <string name="add_selected">Add Selected</string>
    <string name="beyond_barries">Beyond Barries</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="item_6">Item 6</string>
    <string name="item_7">Item 7</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="join">Join</string>
    <string name="period">Period</string>
    <string name="element_1">Element 1</string>
    <string name="challenge_type">Challenge type</string>
    <string name="element_2">Element 2</string>
    <string name="tracking_with">Tracking with</string>
    <string name="element_3">Element 3</string>
    <string name="description">Description</string>
    <string name="new_workout">NEW WORKOUT</string>
    <string name="name_your_workout">Name your Workout</string>
    <string name="workout_1">WORKOUT 1</string>
    <string name="create_workout">Create Workout</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="current_weight">Current Weight</string>
    <string name="current_body_fat">Current Body Fat</string>
    <string name="height">Height</string>
    <string name="set_your_goals">Set Your Goals</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="remember_me">Remember Me</string>
    <string name="take_photo">Take Photo</string>
    <string name="statistics">Statistics</string>
    <string name="bmi_status">BMI Status</string>
    <string name="workouts">Workouts</string>
    <string name="add_more_exercises">Add More Exercises</string>
    <string name="done">Done</string>
    <string name="b">B</string>
    <string name="body_weight">Body Weight</string>
    <string name="ready_for_a_challenge">Ready for a challenge ?</string>
    <string name="zero_days">0_days</string>
    <string name="enter_current_weight">Enter Current Weight</string>
    <string name="enter_body_fat_percentage">Enter Body Fat %</string>
    <string name="goal_body_fat_percentage">Goal Body Fat %</string>
    <string name="enter_goal_body_fat_percentage">Enter Goal Body Fat %</string>
    <string name="zero_exercises_selected">0 exercises selected</string>
    <string name="zero_percentage">0 %</string>
    <string name="zero_kgs">0 kgs</string>
    <string name="zero_kgs_brackets">(0 kgs)</string>
    <string name="bmi">BMI: 0.0</string>
    <string name="status_unknown">Status: Unknown</string>
    <string name="bmi_stats"><![CDATA[Underweight: &lt; 18.5\nNormal: 18.5 - 24.9\nOverweight: 25 - 29.9\nObese: 30+]]></string>
    <string name="workout">Workout</string>
    <string name="default_notification_channel_id">flexforce_channel</string>
    <string name="notification_centre">Notification Centre</string>
    <string name="icon_description">FlexForce icon</string>
    <string name="flexforce_title">FlexForce</string>
    <string name="default_message">New friend suggestion</string>
    <string name="channel_description">Notification Channel Description</string>
    <string name="default_web_client_id">7419107632-152gmk4f1r7brfnihue8dt4cmdumst9t.apps.googleusercontent.com</string>
    <string name="leave_challenge">Leave Challenge</string>
    <string name="challenge_progress">Challenge Progress</string>
    <string name="view_challenge">View Challenge</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="loginbtngoogle">Login with google</string>
    <string name="save_changes" translatable="false">Save Changes</string>
    <string name="image_description" translatable="false">Image description</string>
    <string name="fingerprint_icon" translatable="false">Fingerprint icon</string>
    <string name="or_text" translatable="false">or</string>
    <string name="already_have_account" translatable="false">Already have an account? %1$s</string>
    <string name="login_text" translatable="false">Login</string>

</resources>