<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="0dp"
    android:background="@drawable/home_screen">

    <!-- Image View -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/register"
        android:contentDescription="@string/image_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_weight="3">

        <!-- Login Title -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- Sign In Message -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="username"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/lockclosedoutline"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <!-- Remember Me Checkbox -->
        <CheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_light"/>
    </LinearLayout>

    <!-- Button Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Login Button -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_black_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/loginbtn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />

        <!-- OR Divider with Line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_text"
                android:textColor="@color/white"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/montserrat_light" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>

        <!-- Login with Google Button -->
        <Button
            android:id="@+id/googleSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_black_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/loginbtngoogle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />

        <!-- Fingerprint Button -->
        <ImageButton
            android:id="@+id/bioAuthBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/fingerprint"
            android:contentDescription="@string/fingerprint_icon"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackgroundBorderless" />
    </LinearLayout>

    <!-- Register Link -->
    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/dont_have_an_account_register"
        android:textColor="@color/white" />

</LinearLayout>
