<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="108dp"
    android:text="@string/welcome_to_flexforce"
    android:textColor="@color/white"
    android:textSize="48sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/with_this_app_you_will_be_able_to_get_that_summer_body_in_no_time_but_obviously_enjoy_the_journey"
    android:textColor="@color/white"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textView1" />

   <Button
    android:id="@+id/GetStartedBtn"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_button"
    android:text="@string/get_started"
    android:textColor="@color/black"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/textView2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="100dp" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/terms_and_condition_apply"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@id/GetStartedBtn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>