<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddExercisesFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_exercises"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <!-- Search Bar -->
    <EditText
        android:id="@+id/search_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_exercise"
        android:layout_margin="16dp" />

    <!-- Exercise RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>

    <!-- Add Selected Button -->
    <Button
        android:id="@+id/btn_add_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_selected"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>
</LinearLayout>
