<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:contentDescription="@string/welcomebackground"
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="0dp">

        <!-- Content Layout with Title, Subtitle, and Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="start"
            android:padding="16dp"
            android:layout_weight="2">

            <!-- Title Text -->
            <TextView
                android:id="@+id/welcomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_flexforce"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat_medium" />

            <!-- Subtitle Text -->
            <TextView
                android:id="@+id/welcomeSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:text="@string/with_this_app_you_will_be_able_to_get_that_summer_body_in_no_time_but_obviously_enjoy_the_journey"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_weight="1">
            <!-- Get Started Button -->
            <Button
                android:id="@+id/getStartedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/black"
                android:layout_gravity="center" />

            <!-- Terms and Conditions Text -->
            <TextView
                android:id="@+id/termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition_apply"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
